--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,8 +1,18 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+
+$font: #222;
+
+* {
   margin: 0;
   padding: 0;
 }
 
+body{
+  overflow-x: hidden;
+  font-family: 'Libre Baskerville';
+}
+
+/* HERO BACKGROUND */
 .background {
   width: 100%;
   height: 100vh;
@@ -28,5 +38,78 @@ body{
   &-beige {
     background: #4600f1;
     grid-area: 17 / 15 / 19 / 17;
+  }
+}
+
+/* HERO TEXT */
+.context {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 3rem 5rem;
+  &-title{
+    height: 9rem;
+    overflow: hidden;
+    color: $font;
+    font-size: 4.5rem;
+  }
+
+  &-brief{
+    color: $font;
+    font-size: 1.4rem;
+    width: 70%;
+    padding: 2rem 1rem;
+  }
+}
+
+/* BUTTON EFFECT */
+.btn {
+  cursor: pointer;
+  margin: 2rem;
+  font-size: 1.3rem;
+  line-height: 3rem;
+  padding: 0rem 2rem;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.effect04 {
+  display: inline-flex;
+  color: $font;
+  outline: solid 1px $font;
+  position: relative;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  &::before,
+  & span {
+    margin: 0 auto;
+    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    transition-duration: 0.4s;
+  }
+  
+  &:hover{
+    background-color: $font;
+    & span{
+      transform: translateY(-400%) scale(-0.1,20);
+    }
+  }
+
+  &::before{
+    content: attr(data-sm-link-text);
+    color: #FFF;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transform: translateY(500%) scale(-0.1,20);
+  }
+
+  &:hover::before{
+    letter-spacing: 0.05em;
+    transform: translateY(0) translateX(20%) scale(1,1);
   }
 }
