Animation when entering register page

--- a/client/src/components/HeroBackground/HeroBackground.scss
+++ b/client/src/components/HeroBackground/HeroBackground.scss
@@ -71,7 +71,7 @@ $font: #222;
         }
     }
 
-    &-blue {
+    &-purple {
         background: #4600f1;
         grid-area: 17 / 15 / 19 / 17;
         @media(max-width: 800px){
