--- a/client/src/components/HeroContext/HeroContext.scss
+++ b/client/src/components/HeroContext/HeroContext.scss
@@ -47,6 +47,7 @@ $font: #222;
     text-transform: uppercase;
     @media(max-width: 800px){
         font-size: 1.1rem;
+        margin: 0.5rem 1rem;
     }
     &:hover {
         text-decoration: none;
