Add signout and category in Collection model

--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -5,29 +5,44 @@
 }
 
 .nav{
-    width: 25vw;
+    width: 30vw;
     height: 100vh;
     background: crimson;
 }
 
 .coll {
-    width: 75vw;
+    width: 70vw;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin: 5rem;
+
     &-cards{
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        padding: 1.5rem;
-        width: 100%;
+        padding: 2rem;
         background: #f3f3f3;
-        border-bottom-left-radius: 2rem;
-        transition: 200ms;
+        transition: 300ms;
+        margin: 1rem;
         &:hover{
             cursor: pointer;
-            background: #222;
-            color: #fff;
+            transform: translateY(-5px);
+            box-shadow: 5px 5px #cccccc, 10px 10px #b3b3b3;
+        }
+
+        &__name{
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        &__site{
+            font-size: 0.8rem;
+            color: crimson;
+        }
+
+        &__num {
+            color: gray;
+            padding: 1rem 0;
+            font-size: 0.8rem;
         }
     }
 }
