Style collections and regroup files

--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -17,32 +17,22 @@
     flex-wrap: wrap;
     margin: 5rem;
 
-    &-cards{
+    & .add-card{
         padding: 2rem;
         background: #f3f3f3;
-        transition: 300ms;
-        margin: 1rem;
-        &:hover{
-            cursor: pointer;
-            transform: translateY(-5px);
-            box-shadow: 5px 5px #cccccc, 10px 10px #b3b3b3;
-        }
+        font-size: 3rem;
+        box-shadow: 6px 6px #cccccc, 12px 12px #b3b3b3;
 
-        &__name{
-            text-align: center;
-            font-size: 1.5rem;
+        & p {
+            font-size: 1.2rem;
             font-weight: bold;
+            margin-bottom: 1rem;
         }
 
-        &__site{
-            font-size: 0.8rem;
-            color: crimson;
-        }
-
-        &__num {
-            color: gray;
-            padding: 1rem 0;
-            font-size: 0.8rem;
+        & form{
+            display: flex;
+            flex-direction: column;
+            width: 18rem;
         }
     }
 }
