Add new collection in browser

--- a/client/src/components/PasswordCollections/Input/Input.scss
+++ b/client/src/components/PasswordCollections/Input/Input.scss
@@ -93,6 +93,7 @@
     font-size: var(--fieldHintFontSize, inherit);
     transition: top .2s cubic-bezier(0.9, -0.15, 0.1, 1.15), opacity .2s ease-out, font-size .2s ease-out;
     will-change: bottom, opacity, font-size;
+    color: #444;
 }
 
 .field__input:focus ~ .field__label-wrap .field__label,
