--- a/client/src/components/PasswordCollections/Button/Button.scss
+++ b/client/src/components/PasswordCollections/Button/Button.scss
@@ -1,6 +1,6 @@
 button.fancy {
     background-color: transparent;
-    border: 2px solid #5d5d5d;
+    border: 2px solid #302d29;
     border-radius: 0;
     box-sizing: border-box;
     color: #fff;
@@ -25,7 +25,7 @@ button.fancy::before {
     content: " ";
     width: 0;
     height: 2px;
-    background: #5d5d5d;
+    background: #302d29;
     top: 50%;
     left: 1.5em;
     position: absolute;
@@ -38,7 +38,7 @@ button.fancy input {
     font-size: 1.1em;
     transition: all 0.3s ease-in-out;
     text-transform: uppercase;
-    color: #5d5d5d;
+    color: #302d29;
     cursor: pointer;
     border: none;
     background: none;
@@ -76,7 +76,7 @@ button.fancy .bottom-key-1 {
 
 button.fancy:hover {
     color: white;
-    background: #5d5d5d;
+    background: #302d29;
 }
 
 button.fancy:hover::before {
