--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -1,26 +1,107 @@
+@mixin button($bg, $color, $margin-y) {
+    background: $bg;
+    box-shadow: 2px 3px #222;
+    color: $color;
+    border: none;
+    padding: 0.7rem;
+    font-size: 1.1rem;
+    border-radius: 2rem;
+    margin: $margin-y 0;
+    font-style: italic;
+    width: 15rem;
+    transition: 200ms cubic-bezier(0.645, 0.045, 0.355, 1);
+    &:hover{
+        cursor: pointer;
+        box-shadow: 0 5px 8px #222;
+        transform: translateY(-4px);
+    }
+}
+
 .flex{
     display: flex;
     flex-direction: row;
     font-family: "Poppins";
+    background: #da3b35;
 }
 
 .nav{
-    width: 30vw;
+    width: 25vw;
     height: 100vh;
-    background: crimson;
+    border-top-right-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    &-flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        &__name{
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 1.2rem;
+            padding-bottom: 2rem;
+        }
+        &__email {
+            text-align: center;
+            font-size: 1.1rem;
+        }
+        &__id {
+            text-align: center;
+            font-size: 0.8rem;
+            opacity: 0.7;
+        }
+        &__categories {
+            display: flex;
+            flex-direction: column;
+            padding: 3rem 0;
+            height: 69vh;
+            position: relative;
+            &::before{
+                position: absolute;
+                content: '';
+                top: 1.5rem;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                height: 2px;
+                width: 15vw;
+                background: rgba(34, 34, 34, .3);
+            }
+            &::after{
+                position: absolute;
+                content: '';
+                bottom: 1.5rem;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                height: 2px;
+                width: 15vw;
+                background: rgba(34, 34, 34, .3);
+            }
+        }
+        &__signout {
+            @include button(#4600f1, #fff, 0);
+        }
+    }
+}
+
+.cat-button{
+    @include button(#c6e92a, #000, 0.4rem);
 }
 
 .coll {
-    width: 70vw;
-    height: 100%;
+    width: 75vw;
+    min-height: 100%;
+    background: #222;
     display: flex;
     flex-wrap: wrap;
-    margin: 5rem;
+    padding: 4rem;
+    border-top-left-radius: 3rem;
+    border-bottom-left-radius: 3rem;
 
     & .add-card{
         padding: 2rem;
         background: #f3f3f3;
         font-size: 3rem;
+        max-height: 18rem;
+        border-top-left-radius: 3rem;
         box-shadow: 6px 6px #cccccc, 12px 12px #b3b3b3;
 
         & p {
