--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -95,11 +95,21 @@
     padding: 4rem;
     border-top-left-radius: 3rem;
     border-bottom-left-radius: 3rem;
+    &-flex{
+        display: flex;
+        flex-wrap: nowrap;
+        background: #333;
+        padding: 1rem;
+        border-radius: 2rem;
+        overflow-x: scroll;
+        margin-top: -10rem;
+    }
 
     & .add-card{
         padding: 2rem;
         background: #f3f3f3;
         font-size: 3rem;
+        margin: 0 2rem;
         max-height: 18rem;
         border-top-left-radius: 3rem;
         box-shadow: 6px 6px #cccccc, 12px 12px #b3b3b3;
