--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -24,64 +24,6 @@
     background: #da3b35;
 }
 
-.nav{
-    width: 25vw;
-    height: 100vh;
-    border-top-right-radius: 3rem;
-    border-bottom-right-radius: 3rem;
-    &-flex{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 1rem;
-        &__name{
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 1.2rem;
-            padding-bottom: 2rem;
-        }
-        &__email {
-            text-align: center;
-            font-size: 1.1rem;
-        }
-        &__id {
-            text-align: center;
-            font-size: 0.8rem;
-            opacity: 0.7;
-        }
-        &__categories {
-            display: flex;
-            flex-direction: column;
-            padding: 3rem 0;
-            height: 69vh;
-            position: relative;
-            &::before{
-                position: absolute;
-                content: '';
-                top: 1.5rem;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                height: 2px;
-                width: 15vw;
-                background: rgba(34, 34, 34, .3);
-            }
-            &::after{
-                position: absolute;
-                content: '';
-                bottom: 1.5rem;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                height: 2px;
-                width: 15vw;
-                background: rgba(34, 34, 34, .3);
-            }
-        }
-        &__signout {
-            @include button(#4600f1, #fff, 0);
-        }
-    }
-}
-
 .cat-button{
     @include button(#c6e92a, #000, 0.4rem);
 }
@@ -91,18 +33,15 @@
     min-height: 100%;
     background: #222;
     display: flex;
-    flex-wrap: wrap;
     padding: 4rem;
     border-top-left-radius: 3rem;
     border-bottom-left-radius: 3rem;
     &-flex{
         display: flex;
         flex-wrap: nowrap;
-        background: #333;
         padding: 1rem;
         border-radius: 2rem;
-        overflow-x: scroll;
-        margin-top: -10rem;
+        // overflow-x: scroll;
     }
 
     & .add-card{
