--- a/client/src/components/PasswordCollections/NewPassword/NewPassword.scss
+++ b/client/src/components/PasswordCollections/NewPassword/NewPassword.scss
@@ -19,3 +19,26 @@
         width: 18rem;
     }
 }
+
+.select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    font-family: inherit;
+    border: none;
+    padding-bottom: 0.2rem;
+    border-bottom: 2px solid rgba(0,0,0, .25);
+    cursor: pointer;
+    color: #444;
+    margin: 1rem 0;
+    padding-bottom: 0.3rem;
+    width: 100%;
+    font-size: 1rem;
+    &:focus {
+        color: black;
+    }
+}
+
+  select::-ms-expand {
+    display: none;
+}
