--- a/client/src/components/PasswordCollections/Loading/Loading.scss
+++ b/client/src/components/PasswordCollections/Loading/Loading.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     color: #c6e92a;
     font-weight: bold;
     font-size: 1.5rem;
