--- a/client/src/components/PasswordCollections/Card/Card.scss
+++ b/client/src/components/PasswordCollections/Card/Card.scss
@@ -3,7 +3,7 @@
     background: #f3f3f3;
     transition: 300ms;
     margin: 1rem;
-    max-height: 6.5rem;
+    height: 6.5rem;
     min-width: 8rem;
     position: relative;
     &:hover{
