--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -33,15 +33,19 @@
     min-height: 100%;
     background: #222;
     display: flex;
+    flex-direction: column;
     padding: 4rem;
     border-top-left-radius: 3rem;
     border-bottom-left-radius: 3rem;
-    &-flex{
+    &-row{
         display: flex;
-        flex-wrap: nowrap;
-        padding: 1rem;
+    }
+    &-flex{
+        padding: 4rem 0;
+        width: 100%;
+        display: flex;
         border-radius: 2rem;
-        // overflow-x: scroll;
+        overflow-x: auto;
     }
 
     & .add-card{
