Fetch passwords from backend

--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -37,6 +37,7 @@
     padding: 4rem;
     border-top-left-radius: 3rem;
     border-bottom-left-radius: 3rem;
+    position: relative;
     &-row{
         display: flex;
     }
@@ -69,4 +70,14 @@
             width: 18rem;
         }
     }
+}
+
+.password {
+    width: 76vw;
+    position: absolute;
+    border-top-left-radius: 3rem;
+    border-bottom-left-radius: 3rem;
+    right: 0;
+    min-height: 100%;
+    background: #999;
 }
