View passwords on browser

--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -3,8 +3,8 @@
     box-shadow: 2px 3px #222;
     color: $color;
     border: none;
-    padding: 0.7rem;
-    font-size: 1.1rem;
+    padding: 0.8rem;
+    font-size: 1.15rem;
     border-radius: 2rem;
     margin: $margin-y 0;
     font-style: italic;
@@ -25,18 +25,17 @@
 }
 
 .cat-button{
-    @include button(#c6e92a, #000, 0.4rem);
+    @include button(#c6e92a, #000, 0.45rem);
 }
 
 .coll {
-    width: 75vw;
+    width: calc(100% - 24rem);
     min-height: 100%;
     background: #222;
     display: flex;
     flex-direction: column;
     padding: 4rem;
     border-top-left-radius: 3rem;
-    border-bottom-left-radius: 3rem;
     position: relative;
     &-row{
         display: flex;
@@ -70,14 +69,4 @@
             width: 18rem;
         }
     }
-}
-
-.password {
-    width: 76vw;
-    position: absolute;
-    border-top-left-radius: 3rem;
-    border-bottom-left-radius: 3rem;
-    right: 0;
-    min-height: 100%;
-    background: #999;
 }
