--- a/client/src/components/PasswordCollections/Passwords/Passwords.scss
+++ b/client/src/components/PasswordCollections/Passwords/Passwords.scss
@@ -38,13 +38,13 @@
         & tbody {
             transition: 200ms;
             & td{
-                padding: 1rem;
+                padding: 0.8rem;
                 & input{
                     border: none;
                     background: none;
                 }
             }
-            &:hover{
+            & tr:hover{
                 background: rgb(250, 250, 250);
             }
         }
@@ -60,5 +60,16 @@
             cursor: pointer;
             opacity: 0.3;
         }
+    }
+}
+
+.icon {
+    cursor: pointer;
+    padding: 0.6rem;
+    border-radius: 1rem;
+    transition: 200ms;
+    &:hover{
+        background: rgb(160, 160, 160);
+        color: white;
     }
 }
