--- a/client/src/components/PasswordCollections/Card/Card.scss
+++ b/client/src/components/PasswordCollections/Card/Card.scss
@@ -30,3 +30,29 @@
         font-size: 0.8rem;
     }
 }
+
+.bar {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 8.5rem;
+    border-radius: 1rem;
+    height: 0.5rem;
+    background-color: #d4d4d4;
+    &-progress {
+        position: absolute;
+        left: 0;
+        background: linear-gradient(to right, #4600f1, #da3b35);
+        height: inherit;
+        border-bottom-left-radius: 0.5rem;
+        border-top-left-radius: 0.5rem;
+    }
+    &-num{
+        font-size: 0.7rem;
+        color: gray;
+        display: block;
+        margin-top: 0.65rem;
+        float: left;
+    }
+}
