Remove password on browser

--- a/client/src/components/PasswordCollections/Card/Card.scss
+++ b/client/src/components/PasswordCollections/Card/Card.scss
@@ -50,7 +50,7 @@
     }
     &-num{
         font-size: 0.7rem;
-        color: gray;
+        color: rgb(65, 65, 65);
         display: block;
         margin-top: 0.65rem;
         float: left;
