--- a/client/src/components/PasswordCollections/NewPassword/NewPassword.scss
+++ b/client/src/components/PasswordCollections/NewPassword/NewPassword.scss
@@ -1,10 +1,12 @@
-.add-card{
+.add-pass{
     padding: 2rem;
     background: #f3f3f3;
     font-size: 3rem;
     margin: 0 2rem;
-    max-height: 18rem;
+    width: 18rem;
+    height: 1.5rem;
     border-top-left-radius: 3rem;
+    border-bottom-left-radius: 3rem;
     box-shadow: 6px 6px #cccccc, 12px 12px #b3b3b3;
 
     & p {
@@ -13,11 +15,45 @@
         margin-bottom: 1rem;
     }
 
-    & form{
-        display: flex;
-        flex-direction: column;
-        width: 18rem;
+    & .navigate{
+      margin-left: 2rem;
+      cursor: pointer;
+      font-size: 1.5rem;
+      transition: 300ms;
     }
+
+    & form{
+        display: none;
+        flex-direction: column;
+    }
+}
+
+.add-enter{
+  height: 1.5rem;
+}
+.add-enter-active{
+  height: 18rem;
+  transition: all 300ms ease-in;
+}
+.add-enter-done{
+  height: 18rem;
+}
+.add-exit{
+  height: 18rem;
+}
+.add-exit-active{
+  height: 1.5rem;
+  transition: height 300ms ease-in 300ms;
+}
+.add-exit-done{
+  height: 1.5rem;
+}
+
+.form-enter-done{
+  display: flex !important;
+}
+.form-exit-done{
+  display: none;
 }
 
 .select {
