--- a/client/src/components/PasswordCollections/Passwords/Passwords.scss
+++ b/client/src/components/PasswordCollections/Passwords/Passwords.scss
@@ -13,13 +13,12 @@
             font-family: 'Poppins';
         }
         & a{
-            color: crimson;
+            color: #4600f1;
         }
     }
 
     &-nopass{
         width: 100%;
-        background: red;
         text-align: center;
     }
 
@@ -53,12 +52,12 @@
     &-close{
         position: absolute;
         right: 1rem;
-        top: -0.5rem;
-        font-size: 4rem;
+        top: -0.1rem;
+        font-size: 2rem;
+        font-weight: bold;
         transition: 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
         &:hover{
             cursor: pointer;
-            opacity: 0.3;
         }
     }
 }
