Handle filtering collections

--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -24,10 +24,6 @@
     background: #da3b35;
 }
 
-.cat-button{
-    @include button(#c6e92a, #000, 0.45rem);
-}
-
 .coll {
     width: calc(100% - 24rem);
     min-height: 100%;
@@ -41,10 +37,16 @@
         display: flex;
     }
     &-flex{
-        padding: 4rem 0;
+        padding: 2rem 0;
         width: 100%;
         display: flex;
         border-radius: 2rem;
         overflow-x: auto;
+    }
+
+    &-num {
+        color: #c6e92a;
+        margin-top: 3rem;
+        margin-left: 1rem;
     }
 }
