--- a/client/src/components/HeroBackground/HeroBackground.scss
+++ b/client/src/components/HeroBackground/HeroBackground.scss
@@ -16,7 +16,7 @@ $font: #222;
     }
 
     &-beige {
-        background: #F8D05D;
+        background: #c6e92a;
         grid-area: 1 / 17 / 19 / 21;
         display: flex;
         justify-content: right;
