--- a/client/src/components/PasswordCollections/PasswordCollections.scss
+++ b/client/src/components/PasswordCollections/PasswordCollections.scss
@@ -21,7 +21,6 @@
     display: flex;
     flex-direction: row;
     font-family: "Poppins";
-    background: #da3b35;
 }
 
 .coll {
@@ -31,7 +30,6 @@
     display: flex;
     flex-direction: column;
     padding: 4rem;
-    border-top-left-radius: 3rem;
     position: relative;
     &-row{
         display: flex;
@@ -45,7 +43,7 @@
     }
 
     &-num {
-        color: #c6e92a;
+        color: #1bdde6;
         margin-top: 3rem;
         margin-left: 1rem;
     }
