--- a/client/src/components/PasswordCollections/Passwords/Passwords.scss
+++ b/client/src/components/PasswordCollections/Passwords/Passwords.scss
@@ -1,37 +1,56 @@
 .password {
-    width: calc(100% - 25rem);
+    width: calc(100% - 24rem);
     position: absolute;
-    border-top-left-radius: 3rem;
-    top: .5rem;
+    top: 0;
     right: 0;
     min-height: 100%;
-    background: white;
+    background: #c6e92a;
 
+    &-num {
+        width: 90%;
+        margin: 4rem auto 0 auto;
+        color: #302d29;
+        & span {
+            font-weight: bold;
+        }
+    }
+    
     &-info{
         text-align: center;
         & h1 {
             font-family: 'Poppins';
+            margin-top: 2rem;
         }
         & a{
-            color: #4600f1;
+            font-size: 0.9rem;
+            text-decoration: none;
+            border: 1px solid  #302d29;
+            padding: 0.1rem 1rem;
+            border-radius: 0.9rem;
+            background: #302d29;
+            color: #c6e92a;
+            transition: 100ms;
+            &:hover{
+                color: #302d29;
+                background: #c6e92a;
+            }
         }
-    }
-
-    &-nopass{
-        width: 100%;
-        text-align: center;
+        & h3 {
+            color: #302d29;
+            margin-top: 0.6rem;
+        }
     }
 
     &-pass table{
         border-collapse: collapse;
         width: 90%;
-        margin: 4rem auto;
+        margin: 2rem auto;
         & thead{
             font-weight: bold;
-            background: rgb(236, 236, 236);
+            background: #302d29;
             & td{
                 padding: 1rem;
-                color: #222;
+                color: #c6e92a;
             }
         }
         & tbody {
@@ -44,7 +63,7 @@
                 }
             }
             & tr:hover{
-                background: rgb(250, 250, 250);
+                background: white;
             }
         }
     }
@@ -68,7 +87,6 @@
     border-radius: 1rem;
     transition: 200ms;
     &:hover{
-        background: rgb(160, 160, 160);
-        color: white;
+        background: #c6e92a;
     }
 }
