--- a/client/src/components/PasswordCollections/Button/Button.scss
+++ b/client/src/components/PasswordCollections/Button/Button.scss
@@ -1,7 +1,7 @@
 button.fancy {
     background-color: transparent;
     border: 2px solid #302d29;
-    border-radius: 0;
+    border-radius: 2rem;
     box-sizing: border-box;
     color: #fff;
     cursor: pointer;
