--- a/client/src/components/PasswordCollections/NewPassword/NewPassword.scss
+++ b/client/src/components/PasswordCollections/NewPassword/NewPassword.scss
@@ -7,7 +7,8 @@
     height: 1.5rem;
     border-top-left-radius: 3rem;
     border-bottom-left-radius: 3rem;
-    box-shadow: 6px 6px #cccccc, 12px 12px #b3b3b3;
+    box-shadow: 1px 1px 5px #302d29, 6px 6px #1bdde6,
+                7px 7px 2px #302d29, 12px 12px #da3b35;
 
     & p {
         font-size: 1.2rem;
@@ -16,7 +17,7 @@
     }
 
     & .navigate{
-      margin-left: 2rem;
+      float: right;
       cursor: pointer;
       font-size: 1.5rem;
       transition: 300ms;
