Add forgot password functionality

--- a/client/src/components/LoginForm/LoginForm.scss
+++ b/client/src/components/LoginForm/LoginForm.scss
@@ -77,6 +77,12 @@
             color: #fff;
         }
     }
+
+    &-resetPassword{
+        color: pink;
+        font-size: 0.9rem;
+        margin-left: auto;
+    }
 }
 
 .have-account{
